--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext.fragment_version = "1.6.0"
+    ext.nav_version = "2.6.0"
+    ext.hilt_version = "2.44"
+    ext.coroutines_version = "1.7.2"
+    ext.retrofit_version = "2.9.0"
+}
+
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
 }
