--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.fragment_version = "1.6.0"
     ext.nav_version = "2.6.0"
+    ext.lifecycle_version = "2.6.1"
     ext.hilt_version = "2.44"
     ext.coroutines_version = "1.7.2"
     ext.retrofit_version = "2.9.0"
