--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField("String", "TMDB_BASE_URL", '"https://api.themoviedb.org/3/"')
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
