--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ buildscript {
     ext.hilt_version = "2.44"
     ext.coroutines_version = "1.7.2"
     ext.retrofit_version = "2.9.0"
+    ext.paging_version = "3.1.1"
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
 }
 
 plugins {
