--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,10 @@ android {
         versionName "1.0"
 
         buildConfigField("String", "TMDB_BASE_URL", '"https://api.themoviedb.org/3/"')
-        buildConfigField("String", "TMDB_IMG_500_BASE_URL", '"https://image.tmdb.org/t/p/w500"')
+        buildConfigField("String", "TMDB_IMG_342_URL", '"https://image.tmdb.org/t/p/w342"')
+        buildConfigField("String", "TMDB_IMG_500_URL", '"https://image.tmdb.org/t/p/w500"')
+        buildConfigField("String", "YOUTUBE_VIDEO_URL", '"https://m.youtube.com/watch?v=%s"')
+        buildConfigField("String", "YOUTUBE_THUMBNAIL_URL", '"https://img.youtube.com/vi/%s/0.jpg"')
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
